[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
prost = "0.11"  # protobuf for Rust
tonic = "0.9"   # gRPC for Rust
redis = "0.23"  # Same library, different ecosystem